Revision history for App-DBBrowser


2.422  2025-01-23
        - Extension 'Column': it is now possible to use a column from a chosen table.
        - A new way to create subqueries: build the subquery using the sql menu.
        - Update input filter Range_Rows
        - Added the exists and not exists operator.

2.421  2025-01-09
        - Update join condition.
        - Update join menu and union menu.
        - Update function 'group_concat' and the respective equivalents.
        - Don't delete the alias of a column if the column has been removed from the selected columns.
        - String functions and Postgress: convert automatically to text if a column is not char and not varchar.
        - Removed backwards compatibility layer for old search_and_replace settings storage format.

2.420  2024-12-27
        - New option: use aliases in 'group by', 'having' or 'order by'.

2.419  2024-12-20
        - Update input filter Range_Rows.

2.418  2024-12-18
        - Update input filter Choose_Rows.
        - New input filter Empty_Rows.
        - Text::CSV_XS: use 'getline_all' instead of 'getline'.

2.417  2024-11-17
        - Confirm update/delete without where clause.

2.416  2024-10-28
        - Term::Choose minimum version 1.767.

2.415  2024-09-05
        Extended argument 'column': use horizontal format.

2.414  2024-06-13
        - Bugfix Informix 'not matches'.
        - Bugfix in 'replace' function: allow empty replacement string.
        - Bugfix Informix 'day_of_week'.

2.413  2024-05-23
        Bugfix import: don't check for emptiness of the first row if the file is a text file.

2.412  2024-05-21
        - New scalar function 'date_subtract'.
        - Oracle: bugfix in 'date_add' and 'to_epoch'.
        - Oracle does not 'left' and 'right' functions.
        - Bugfix in scalar function 'extract': uppercase field argument.
        - Input filter 'join_columns': bugfix undefined column name.

2.411  2024-05-20
        - Bugfix aliases in 'order_by'.